--- a/geowebcache/pom.xml
+++ b/geowebcache/pom.xml
@@ -677,5 +677,6 @@
 	<module>distributed</module>
     <module>s3storage</module>
     <module>sqlite</module>
+    <module>azurestorage</module>
   </modules>
 </project>
